Set default printRestored to true and refine Dijkstra logic
Enabled default logging in Fcit by initializing printRestored to true and refactored the uncovered parameter in Dijkstra algorithms for handling edge traversal. Simplified comments and logic related to uncovered edges while ensuring consistent path reconstruction and adjacency checks.